--- a/example/flutter_example/pubspec.yaml
+++ b/example/flutter_example/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ^3.1.0
+  sdk: ">=3.0.2 <4.0.0"
 
 dependencies:
   equations:
@@ -17,8 +17,8 @@ dependencies:
     sdk: flutter
 
   flutter_svg: ^2.0.7
-  go_router: ^10.1.0
-  intl: ^0.18.1
+  go_router: ^14.1.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
