--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,14 @@ repository: https://github.com/albertodev01/equations
 homepage: https://pub.dev/packages/equations
 
 environment:
-  sdk: ^3.1.0
+  sdk: ">=3.0.2 <4.0.0"
 
 dependencies:
   fraction: ^5.0.2
-  petitparser: ^5.4.0
+  petitparser: ^6.0.2
 
 dev_dependencies:
-  test: ^1.24.6
+  test: ^1.25.5
 
 topics:
   - equations
